@@ -106,7 +106,7 @@ public class ConnectionManager {
 		}, autoCloseInterval, autoCloseInterval);
 	}
 	
-	public Connection getConnection(InetAddress host, int port, String localHost, SSLContext sslContext) throws UnknownHostException, IOException {
+	public Connection getConnection(InetAddress host, int port, String localHost, SSLContext sslContext, int connectTimeout) throws UnknownHostException, IOException {
 		
 		log.debug("connection requested for host: " + host + " and port: " + port);
 		
@@ -126,7 +126,7 @@ public class ConnectionManager {
 			}
 		}
 
-		Connection result = Connection.open(host, port, localHost, sslContext, this);
+		Connection result = Connection.open(host, port, localHost, sslContext, this, connectTimeout);
 		numberInPool.incrementAndGet();
 		return result;
 	}
